--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -86,6 +86,7 @@ bookmarks=true, linktocpage]{hyperref}
 \def\oabq{O(\ab^2)}
 \def\oatauq{O(\atau^2)}
 \def\oabatau{O(\ab \atau)}
+\def\oatplusabsq{O((\at+\ab)^2)}
 \def\oas{O(\as)}
 \def\oatauqatab{O(\atau^2 +\ab \atau )}
 
@@ -1886,10 +1887,15 @@ MSSM.  These corrections can then be included in the
 calculation of the Higgs pole masses when running the spectrum
 generator by setting the appropriate SLHA flags.  
 
-{\color{red} To include all two loop corrections which have been
-  generated the user may simply set entry 4 of the FlexibleSUSY block
-  in the SLHA file to 2.  The user may also want to include only some of
-  the corrections generated, for example in the NMSSM the user may decide not to use the partial corrections at order $\oatq$, $\oabq$, $\oatauq$ and $\oatab$ which have been computed in the MSSM. In that case the entries 9,10,11 and 12 may be used to switch on and off corrections at specific orders, 1 meaning the correction is included and 2 means the correction is not.  Alex: can you check this part matches what you did and maybe fox details a little and also we should decide if it belongs here or if describe SLHA stuff later.}
+{\color{red} When two loop corrections have been enabled in the SLHA
+  file by setting entry 4 of the FlexibleSUSY block to 2 the user may
+  also select individual corrections. Entries 9,10,11 and 12,
+  corrspond to two loop corrections of order $\oatas$, $\oabas$,
+  $\oatplusabsq$ and $\oatauq$ respectively and will be disabled when
+  the corresponding entry is set to zero. In this way, for example, in
+  the NMSSM the user may decide not to use the partial corrections at
+  order $\oatplusabsq$ and $\oatauq$, all of which have
+  only been computed in the MSSM. }
 
 Since the Higgs mass is a very important measurement and
 the two-loop corrections can be larger than the current experimental
