--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -1887,19 +1887,19 @@ MSSM.  These corrections can then be included in the
 calculation of the Higgs pole masses when running the spectrum
 generator by setting the appropriate SLHA flags.  
 
-{\color{red} When two loop corrections have been enabled in the SLHA
+  When two loop corrections have been enabled in the SLHA
   file by setting entry 4 of the FlexibleSUSY block to 2 the user may
   also select individual corrections. Entries 9,10,11 and 12,
-  corrspond to two loop corrections of order $\oatas$, $\oabas$,
+  correspond to two loop corrections of order $\oatas$, $\oabas$,
   $\oatplusabsq$ and $\oatauq$ respectively and will be disabled when
   the corresponding entry is set to zero. In this way, for example, in
   the NMSSM the user may decide not to use the partial corrections at
   order $\oatplusabsq$ and $\oatauq$, all of which have
-  only been computed in the MSSM. }
+  only been computed in the MSSM. 
 
-Since the Higgs mass is a very important measurement and
-the two-loop corrections can be larger than the current experimental
-error \cite{Degrassi:2009yq} we recommend to set these switches to
+Since the Higgs mass is a very important measurement and the two-loop
+corrections can be larger than the current experimental error
+\cite{Degrassi:2009yq} we recommend to set these switches to
 \code{True} in any MSSM-\footnote{In \fs a model is MSSM-like if (i)
   its superpotential is approximately given by the MSSM one, (ii) it
   implements $R$-parity conservation or something equivalent, and
@@ -1914,10 +1914,10 @@ error \cite{Degrassi:2009yq} we recommend to set these switches to
   Examples for NMSSM-like models are the USSM and the \ESSM.} model.
 However in such models the user should still consider whether these
 corrections are really the leading corrections in the model or if
-there are other potentially large two-loop corrections.  For models
-with a more extended Higgs sector we recommend that the leading log
-two-loop corrections are estimated by generalizing those of the MSSM
-or NMSSM.
+there are other potentially large two-loop corrections which are
+missing.  For models with a more extended Higgs sector we recommend
+that the leading log two-loop corrections are estimated by
+generalizing those of the MSSM or NMSSM.
 
 \section{Flexible Applications}
 \label{sec:Flexible}
