use definition of SUSY scale in terms of stop(1) * stop(2)
This addresses Reviewer 1 comment 2.

--- a/doc/flexiblesusy-paper-response-1.tex
+++ b/doc/flexiblesusy-paper-response-1.tex
@@ -40,8 +40,7 @@
 \subsubsection{Comment 2}
 \remark{addressed by Jae-hyeon}
 \begin{lstlisting}
-  SUSYScale = Sqrt[ Product[ M[Su[i]]^(Abs[ZU[i,3]]^2 +
-  Abs[ZU[i,6]]^2), {i,6} ] ]
+  SUSYScale = Sqrt[Product[M[Su[i]]^(Abs[ZU[i,3]]^2 + Abs[ZU[i,6]]^2), {i,6}]];
 \end{lstlisting}
 
 \subsubsection{Comment 3}
