added new references for NMSSMTools.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -182,6 +182,7 @@ ADP-14-17/T875
 
 \newpage
 \section{Introduction}
+
 Supersymmetry (SUSY) provides the only non-trivial way to extend the
 space-time symmetries of the Poincar\'e
 group, which still has scattering in the resulting quantum theory \cite{Coleman:1967ad,Haag:1974qh}. This leads many to suspect that
@@ -207,9 +208,11 @@ allowing fast and reliable exploration of the sparticle spectrum,
 mixings and couplings, which can be obtained from particular choices
 of breaking mechanism inspired boundary conditions and specified
 parameters. Beyond the MSSM there are also two public spectrum
-generators \cite{Ellwanger:2006rn,Allanach:2013kza} for the next to
+generators \cite{Ellwanger:2004xm, Ellwanger:2005dv, Ellwanger:2006rn,Ellwanger:2008py, Allanach:2013kza} for the next to
 minimal supersymmetric standard model (NMSSM) \cite{NMSSM} (or for recent
-reviews see \cite{Ellwanger:2009dp,Maniatis:2009re}).
+reviews see \cite{Ellwanger:2009dp, Maniatis:2009re}).
+
+
 
 None of the fundamental motivations of supersymmetry require
 minimality, and specific alternatives to (or extensions of) the MSSM
@@ -3266,6 +3269,25 @@ Block MINPAR
   %%CITATION = ARXIV:1109.3551;%%
   %16 citations counted in INSPIRE as of 03 Jun 2014
 
+%\cite{Ellwanger:2004xm}
+\bibitem{Ellwanger:2004xm} 
+  U.~Ellwanger, J.~F.~Gunion and C.~Hugonie,
+  %``NMHDECAY: A Fortran code for the Higgs masses, couplings and decay widths in the NMSSM,''
+  JHEP {\bf 0502}, 066 (2005)
+  [hep-ph/0406215].
+  %%CITATION = HEP-PH/0406215;%%
+  %256 citations counted in INSPIRE as of 23 Oct 2014
+
+%\cite{Ellwanger:2005dv}
+\bibitem{Ellwanger:2005dv} 
+  U.~Ellwanger and C.~Hugonie,
+  %``NMHDECAY 2.0: An Updated program for sparticle masses, Higgs masses, couplings and decay widths in the NMSSM,''
+  Comput.\ Phys.\ Commun.\  {\bf 175}, 290 (2006)
+  [hep-ph/0508022].
+  %%CITATION = HEP-PH/0508022;%%
+  %227 citations counted in INSPIRE as of 23 Oct 2014
+
+
 %\cite{Ellwanger:2006rn}
 \bibitem{Ellwanger:2006rn} 
   U.~Ellwanger and C.~Hugonie,
@@ -3274,6 +3296,19 @@ Block MINPAR
   [hep-ph/0612134].
   %%CITATION = HEP-PH/0612134;%%
   %81 citations counted in INSPIRE as of 03 Nov 2013
+
+  %\cite{Ellwanger:2008py}
+\bibitem{Ellwanger:2008py} 
+  U.~Ellwanger, C.-C.~Jean-Louis and A.~M.~Teixeira,
+  %``Phenomenology of the General NMSSM with Gauge Mediated Supersymmetry Breaking,''
+  JHEP {\bf 0805}, 044 (2008)
+  [arXiv:0803.2962 [hep-ph]].
+  %%CITATION = ARXIV:0803.2962;%%
+  %34 citations counted in INSPIRE as of 23 Oct 2014
+
+
+
+
 %\cite{Allanach:2013kza}
 \bibitem{Allanach:2013kza} 
   B.~C.~Allanach, P.~Athron, L.~C.~Tunstall, A.~Voigt and A.~G.~Williams,
