Added MSSM review and removed NMSSM references other than the reviews in line wioth referee request.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -201,16 +201,18 @@ as the low energy effective models originating from string
 theory.
 
 Detailed phenomenological studies have been carried out for scenarios
-within the minimal supersymmetric standard model (MSSM).  Such work
-has been greatly aided by public spectrum generators for the MSSM
+within the minimal supersymmetric standard model (MSSM), for a review
+see \cite{Chung:2003fi}.  Such work has been greatly aided by public
+spectrum generators for the MSSM
 \cite{Allanach:2001kg,Porod:2003um,Djouadi:2002ze,Baer:1993ae,Chowdhury:2011zr},
 allowing fast and reliable exploration of the sparticle spectrum,
 mixings and couplings, which can be obtained from particular choices
 of breaking mechanism inspired boundary conditions and specified
 parameters. Beyond the MSSM there are also two public spectrum
-generators \cite{Ellwanger:2004xm, Ellwanger:2005dv, Ellwanger:2006rn,Ellwanger:2008py, Allanach:2013kza} for the next to
-minimal supersymmetric standard model (NMSSM) \cite{NMSSM} (or for recent
-reviews see \cite{Ellwanger:2009dp, Maniatis:2009re}).
+generators \cite{Ellwanger:2004xm, Ellwanger:2005dv,
+  Ellwanger:2006rn,Ellwanger:2008py, Allanach:2013kza} for the next to
+minimal supersymmetric standard model (NMSSM)  (for
+recent reviews see \cite{Ellwanger:2009dp, Maniatis:2009re}).
 
 
 
@@ -3225,6 +3227,13 @@ Block MINPAR
   Nucl.\ Phys.\ B {\bf 194} (1982) 65.
   %%CITATION = NUPHA,B194,65;%%
   %717 citations counted in INSPIRE as of 21 Feb 2014
+\bibitem{Chung:2003fi} D.~J.~H.~Chung, L.~L.~Everett, G.~L.~Kane,
+  S.~F.~King, J.~D.~Lykken and L.~T.~Wang,
+  %``The Soft supersymmetry breaking Lagrangian: Theory and applications,''
+  Phys.\ Rept.\  {\bf 407}, 1 (2005)
+  [hep-ph/0312378].
+  %%CITATION = HEP-PH/0312378;%%
+  %389 citations counted in INSPIRE as of 23 Oct 2014
 
 %\cite{Allanach:2001kg}
 \bibitem{Allanach:2001kg} 
@@ -3317,22 +3326,6 @@ Block MINPAR
   [arXiv:1311.7659 [hep-ph]].
   %%CITATION = ARXIV:1311.7659;%%
   %2 citations counted in INSPIRE as of 15 Jun 2014
-\bibitem{NMSSM} P. Fayet, Nucl. Phys. B \textbf{90} (1975) 104; Phys. Lett.
-B \textbf{64} (1976) 159; Phys. Lett. B \textbf{69} (1977) 489 and Phys. Lett. B
-\textbf{84} (1979) 416; H.P. Nilles, M. Srednicki and D. Wyler, Phys. Lett. B
-\textbf{120} (1983) 346; J.M. Frere, D.R. Jones and S. Raby, Nucl. Phys. B
-\textbf{222} (1983) 11; J.P. Derendinger and C.A. Savoy, Nucl. Phys. B
-\textbf{237} (1984) 307;  A.I. Veselov, M.I. Vysotsky and K.A. Ter-Martirosian,
-Sov. Phys. JETP \textbf{63} (1986) 489; J.R. Ellis, J.F. Gunion, H.E. Haber, L.
-Roszkowski and F. Zwirner, Phys. Rev. D \textbf{39}  (1989) 844; M. Drees, Int.
-J. Mod. Phys. A \textbf{4}  (1989) 3635; U. Ellwanger, M. Rausch de
-Traubenberg and C.A. Savoy, Phys. 
-Lett. B \textbf{315} (1993) 331, Z. Phys. C {\bf 67} (1995) 665 and Nucl. Phys.
-B \textbf{492} (1997) 307; U.~Ellwanger, Phys.\ Lett.\  B {\bf 303} (1993) 271; P.
-Pandita, Z. Phys. C \textbf{59} (1993) 575; T. Elliott, S.F. King and P.L.
-White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
-\textbf{52} (1995) 4183;  F.~Franke and H.~Fraas, Int.\ J.\ Mod.\ Phys.\  A {\bf
-12} (1997) 479.   D.~J.~Miller, R.~Nevzorov and P.~M.~Zerwas,  Nucl.\ Phys.\ B {\bf 681}, 3 (2004) [hep-ph/0304049].
 %\cite{Ellwanger:2009dp}
 \bibitem{Ellwanger:2009dp} 
   U.~Ellwanger, C.~Hugonie and A.~M.~Teixeira,
