cut references to E6SSM, USSM, and other gauge extensions.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -245,9 +245,9 @@ indirect limits that appears in constrained models from the
 significantly higher limits on first and second generation squarks.
 
 These developments motivate the exploration of non-minimal SUSY models
-which ameliorate the naturalness problems, as can happen in the \ESSM
-\cite{King:2005jy,King:2005my,King:2007uj,Athron:2010zz,Nevzorov:2012hs,Nevzorov:2013tta,Nevzorov:2013ixa}, USSM
-\cite{Fayet:1977yc,Suematsu:1994qm,Cvetic:1995rj,deCarlos:1997yv,Cvetic:1997ky,Demir:1998dk,Langacker:1998tc,Erler:2002pr,Choi:2006fz,Ham:2007wc,Langacker:2008yv,Ham:2008xf,Kalinowski:2008iq} or from other gauge extensions \cite{Batra:2003nj, Medina:2009ey, Bharucha:2013ela}, 
+which ameliorate the naturalness problems, as can happen in the USSM
+\cite{Fayet:1977yc,Cvetic:1997ky,Langacker:2008yv},  \ESSM
+\cite{King:2005jy,Athron:2010zz} and similar models \cite{Nevzorov:2012hs}, or from other gauge extensions \cite{Batra:2003nj, Bharucha:2013ela},
 by raising the tree level Higgs mass. At the same time they can also
 motivate models that are developed with a fresh perspective, based on
 other considerations.  In both cases exploration of such models can be
@@ -554,8 +554,7 @@ Block MASS
 \label{sec:quick-start-alternative-models}
 
 \fs already comes with plenty of predefined models: the CMSSM (simply
-called \code{MSSM}), the NMSSM \cite{NMSSM} in it's $Z_3$-symmetric form (called \code{NMSSM}), $Z_3$-violating NMSSM (\code{SMSSM}), the USSM (\code{UMSSM})
-\cite{Fayet:1977yc,Suematsu:1994qm,Cvetic:1995rj,deCarlos:1997yv,Cvetic:1997ky,Demir:1998dk,Langacker:1998tc,Erler:2002pr,Choi:2006fz,Ham:2007wc,Langacker:2008yv,Ham:2008xf,Kalinowski:2008iq},
+called \code{MSSM}), the NMSSM \cite{NMSSM} in it's $Z_3$-symmetric form (called \code{NMSSM}), $Z_3$-violating NMSSM (\code{SMSSM}), the USSM (\code{UMSSM}),
 the NUHM \ESSM (\code{E6SSM}) \cite{Athron:2007en}, the
 right-handed neutrino extended MSSM (\code{MSSMRHN}), the NUHM-MSSM
 (\code{NUHMSSM}) and the $R$-symmetric MSSM (\code{MRSSM})
@@ -2959,14 +2958,14 @@ agree at the sub-permille level.
 
 \fs generated NUHM \ESSM has also been compared against a handwritten
 spectrum generator for a constrained version of the \ESSM
-\cite{Athron:2009ue, Athron:2009bs, Athron:2011wu, Athron:2012sq,
-  Athron:2012pw, Athron:2013ipa}.  The RGEs could be compared directly
-in unit tests and were found to match.  The handwritten code doesn't
-include full one-loop self-energies or tadpoles so tests on these were
-not carried out.  Although the generators assume different constraints
-they could be compared by using the output of the CE$_6$SSM generator
-as an input to \fs and the spectra were found to be in reasonable
-agreement, given the different levels of precision.
+\cite{Athron:2009ue, Athron:2009bs, Athron:2012pw}.  The RGEs could be
+compared directly in unit tests and were found to match.  The
+handwritten code doesn't include full one-loop self-energies or
+tadpoles so tests on these were not carried out.  Although the
+generators assume different constraints they could be compared by
+using the output of the CE$_6$SSM generator as an input to \fs and the
+spectra were found to be in reasonable agreement, given the different
+levels of precision.
 
 In addition \fs has already undergone some user testing. This includes
 analytic tests of the $R$-symmetric low-energy model (MRSSM) and
@@ -3398,6 +3397,36 @@ Block MINPAR
   %592 citations counted in INSPIRE as of 24 Apr 2014
 %\cite{Chatrchyan:2014lfa}
 
+%\cite{Fayet:1977yc}
+\bibitem{Fayet:1977yc}
+  P.~Fayet,
+  %``Spontaneously Broken Supersymmetric Theories of Weak, Electromagnetic and Strong Interactions,''
+  Phys.\ Lett.\ B {\bf 69} (1977) 489.
+  %%CITATION = PHLTA,B69,489;%%
+  %817 citations counted in INSPIRE as of 04 Jun 2014
+%\cite{deCarlos:1997yv}
+%\cite{Suematsu:1994qm}
+
+\bibitem{Cvetic:1997ky}
+  M.~Cvetic, D.~A.~Demir, J.~R.~Espinosa, L.~L.~Everett and P.~Langacker,
+  %``Electroweak breaking and the mu problem in supergravity models with an additional U(1),''
+  Phys.\ Rev.\ D {\bf 56} (1997) 2861
+   [Erratum-ibid.\ D {\bf 58} (1998) 119905]
+  [hep-ph/9703317].
+  %%CITATION = HEP-PH/9703317;%%
+  %237 citations counted in INSPIRE as of 04 Jun 2014
+
+%\cite{Langacker:2008yv}
+\bibitem{Langacker:2008yv} 
+  P.~Langacker,
+  %``The Physics of Heavy $Z^\prime$ Gauge Bosons,''
+  Rev.\ Mod.\ Phys.\  {\bf 81}, 1199 (2009)
+  [arXiv:0801.1345 [hep-ph]].
+  %%CITATION = ARXIV:0801.1345;%%
+  %519 citations counted in INSPIRE as of 09 Jun 2014
+
+
+
 %\cite{King:2005jy}
 \bibitem{King:2005jy} 
   S.~F.~King, S.~Moretti and R.~Nevzorov,
@@ -3406,24 +3435,6 @@ Block MINPAR
   [hep-ph/0510419].
   %%CITATION = HEP-PH/0510419;%%
   %130 citations counted in INSPIRE as of 03 Nov 2013
-
-%\cite{King:2005my}
-\bibitem{King:2005my} 
-  S.~F.~King, S.~Moretti and R.~Nevzorov,
-  %``Exceptional supersymmetric standard model,''
-  Phys.\ Lett.\ B {\bf 634}, 278 (2006)
-  [hep-ph/0511256].
-  %%CITATION = HEP-PH/0511256;%%
-  %90 citations counted in INSPIRE as of 09 Jun 2014
-
-%\cite{King:2007uj}
-\bibitem{King:2007uj} 
-  S.~F.~King, S.~Moretti and R.~Nevzorov,
-  %``Gauge coupling unification in the exceptional supersymmetric standard model,''
-  Phys.\ Lett.\ B {\bf 650}, 57 (2007)
-  [hep-ph/0701064].
-  %%CITATION = HEP-PH/0701064;%%
-  %46 citations counted in INSPIRE as of 09 Jun 2014
 
 %\cite{Athron:2010zz}
 \bibitem{Athron:2010zz} 
@@ -3442,142 +3453,7 @@ Block MINPAR
   %%CITATION = ARXIV:1205.5967;%%
   %4 citations counted in INSPIRE as of 13 Jun 2014
 
-%\cite{Nevzorov:2013tta}
-\bibitem{Nevzorov:2013tta} 
-  R.~Nevzorov and S.~Pakvasa,
-  %``Exotic Higgs decays in the $E_6$ inspired SUSY models,''
-  Phys.\ Lett.\ B {\bf 728}, 210 (2014)
-  [arXiv:1308.1021 [hep-ph]].
-  %%CITATION = ARXIV:1308.1021;%%
-  %2 citations counted in INSPIRE as of 13 Jun 2014
 
-%\cite{Nevzorov:2013ixa}
-\bibitem{Nevzorov:2013ixa} 
-  R.~Nevzorov,
-  %``Quasi-fixed point scenarios and the Higgs mass in the E6 inspired SUSY models,''
-  Phys.\ Rev.\ D {\bf 89}, 055010 (2014)
-  [arXiv:1309.4738 [hep-ph]].
-  %%CITATION = ARXIV:1309.4738;%%
-  %1 citations counted in INSPIRE as of 13 Jun 2014
-
-
-%\cite{Fayet:1977yc}
-\bibitem{Fayet:1977yc}
-  P.~Fayet,
-  %``Spontaneously Broken Supersymmetric Theories of Weak, Electromagnetic and Strong Interactions,''
-  Phys.\ Lett.\ B {\bf 69} (1977) 489.
-  %%CITATION = PHLTA,B69,489;%%
-  %817 citations counted in INSPIRE as of 04 Jun 2014
-%\cite{deCarlos:1997yv}
-%\cite{Suematsu:1994qm}
-\bibitem{Suematsu:1994qm} 
-  D.~Suematsu and Y.~Yamagishi,
-  %``Radiative symmetry breaking in a supersymmetric model with an extra U(1),''
-  Int.\ J.\ Mod.\ Phys.\ A {\bf 10}, 4521 (1995)
-  [hep-ph/9411239].
-  %%CITATION = HEP-PH/9411239;%%
-  %116 citations counted in INSPIRE as of 09 Jun 2014
-
-  %\cite{Cvetic:1995rj}
-\bibitem{Cvetic:1995rj} 
-  M.~Cvetic and P.~Langacker,
-  %``Implications of Abelian extended gauge structures from string models,''
-  Phys.\ Rev.\ D {\bf 54}, 3570 (1996)
-  [hep-ph/9511378].
-  %%CITATION = HEP-PH/9511378;%%
-  %207 citations counted in INSPIRE as of 09 Jun 2014
-
-
-\bibitem{deCarlos:1997yv} 
-  B.~de Carlos and J.~R.~Espinosa,
-  %``Cold dark matter candidate in a class of supersymmetric models with an extra U(1),''
-  Phys.\ Lett.\ B {\bf 407}, 12 (1997)
-  [hep-ph/9705315].
-  %%CITATION = HEP-PH/9705315;%%
-  %51 citations counted in INSPIRE as of 09 Jun 2014
-%\cite{Cvetic:1997ky}
-\bibitem{Cvetic:1997ky}
-  M.~Cvetic, D.~A.~Demir, J.~R.~Espinosa, L.~L.~Everett and P.~Langacker,
-  %``Electroweak breaking and the mu problem in supergravity models with an additional U(1),''
-  Phys.\ Rev.\ D {\bf 56} (1997) 2861
-   [Erratum-ibid.\ D {\bf 58} (1998) 119905]
-  [hep-ph/9703317].
-  %%CITATION = HEP-PH/9703317;%%
-  %237 citations counted in INSPIRE as of 04 Jun 2014
-
-%\cite{Demir:1998dk}
-\bibitem{Demir:1998dk} 
-  D.~A.~Demir and N.~K.~Pak,
-  %``One loop effects in supergravity models with an additional U(1),''
-  Phys.\ Rev.\ D {\bf 57}, 6609 (1998)
-  [hep-ph/9809357].
-  %%CITATION = HEP-PH/9809357;%%
-  %19 citations counted in INSPIRE as of 09 Jun 2014
-
-%\cite{Langacker:1998tc}
-\bibitem{Langacker:1998tc} 
-  P.~Langacker and J.~Wang,
-  %``U(1)-prime symmetry breaking in supersymmetric E(6) models,''
-  Phys.\ Rev.\ D {\bf 58}, 115010 (1998)
-  [hep-ph/9804428].
-  %%CITATION = HEP-PH/9804428;%%
-  %108 citations counted in INSPIRE as of 09 Jun 2014
-
-%\cite{Erler:2002pr}
-\bibitem{Erler:2002pr}
-  J.~Erler, P.~Langacker and T.~-j.~Li,
-  %``The $Z$ - $Z^\prime$ mass hierarchy in a supersymmetric model with a secluded U(1) -prime breaking sector,''
-  Phys.\ Rev.\ D {\bf 66} (2002) 015002
-  [hep-ph/0205001].
-  %%CITATION = HEP-PH/0205001;%%
-  %84 citations counted in INSPIRE as of 04 Jun 2014
-
-%\cite{Choi:2006fz}
-\bibitem{Choi:2006fz} 
-  S.~Y.~Choi, H.~E.~Haber, J.~Kalinowski and P.~M.~Zerwas,
-  %``The Neutralino sector in the U(1)-extended supersymmetric standard model,''
-  Nucl.\ Phys.\ B {\bf 778}, 85 (2007)
-  [hep-ph/0612218].
-  %%CITATION = HEP-PH/0612218;%%
-  %43 citations counted in INSPIRE as of 09 Jun 2014
-
-%\cite{Ham:2007wc}
-\bibitem{Ham:2007wc} 
-  S.~W.~Ham and S.~K.~OH,
-  %``Electroweak phase transition in MSSM with U(1)-prime in explicit CP violation scenario,''
-  Phys.\ Rev.\ D {\bf 76}, 095018 (2007)
-  [arXiv:0708.1785 [hep-ph]].
-  %%CITATION = ARXIV:0708.1785;%%
-  %20 citations counted in INSPIRE as of 09 Jun 2014
-
-%\cite{Langacker:2008yv}
-\bibitem{Langacker:2008yv} 
-  P.~Langacker,
-  %``The Physics of Heavy $Z^\prime$ Gauge Bosons,''
-  Rev.\ Mod.\ Phys.\  {\bf 81}, 1199 (2009)
-  [arXiv:0801.1345 [hep-ph]].
-  %%CITATION = ARXIV:0801.1345;%%
-  %519 citations counted in INSPIRE as of 09 Jun 2014
-
-%\cite{Ham:2008xf}
-\bibitem{Ham:2008xf} 
-  S.~W.~Ham, T.~Hur, P.~Ko and S.~K.~Oh,
-  %``Neutral scalar Higgs bosons in the USSM at the LHC,''
-  J.\ Phys.\ G {\bf 35}, 095007 (2008)
-  [arXiv:0801.2361 [hep-ph]].
-  %%CITATION = ARXIV:0801.2361;%%
-  %10 citations counted in INSPIRE as of 09 Jun 2014
-
-
-%\cite{Kalinowski:2008iq}
-\bibitem{Kalinowski:2008iq} 
-  J.~Kalinowski, S.~F.~King and J.~P.~Roberts,
-  %``Neutralino Dark Matter in the USSM,''
-  JHEP {\bf 0901}, 066 (2009)
-  [arXiv:0811.2204 [hep-ph]].
-  %%CITATION = ARXIV:0811.2204;%%
-  %30 citations counted in INSPIRE as of 09 Jun 2014
-%\cite{Bharucha:2013ela}
 
 %\cite{Batra:2003nj}
 \bibitem{Batra:2003nj} 
@@ -3587,14 +3463,6 @@ Block MINPAR
   [hep-ph/0309149].
   %%CITATION = HEP-PH/0309149;%%
   %174 citations counted in INSPIRE as of 12 Jun 2014
-%\cite{Medina:2009ey}
-\bibitem{Medina:2009ey} 
-  A.~D.~Medina, N.~R.~Shah and C.~E.~M.~Wagner,
-  %``A Heavy Higgs and a Light Sneutrino NLSP in the MSSM with Enhanced SU(2) D-terms,''
-  Phys.\ Rev.\ D {\bf 80}, 015001 (2009)
-  [arXiv:0904.1625 [hep-ph]].
-  %%CITATION = ARXIV:0904.1625;%%
-  %9 citations counted in INSPIRE as of 12 Jun 2014
 
 \bibitem{Bharucha:2013ela} 
   A.~Bharucha, A.~Goudelis and M.~McGarrie,
@@ -4043,25 +3911,6 @@ Large Muon- and electron-Number Nonconservation in Supergravity Theories,}
 
 
 
-%\cite{Athron:2011wu}
-\bibitem{Athron:2011wu} 
-  P.~Athron, S.~F.~King, D.~J.~Miller, S.~Moretti and R.~Nevzorov,
-  %``LHC Signatures of the Constrained Exceptional Supersymmetric Standard Model,''
-  Phys.\ Rev.\ D {\bf 84}, 055006 (2011)
-  [arXiv:1102.4363 [hep-ph]].
-  %%CITATION = ARXIV:1102.4363;%%
-  %25 citations counted in INSPIRE as of 09 Jun 2014
-
-  
-%\cite{Athron:2012sq}
-\bibitem{Athron:2012sq} 
-  P.~Athron, S.~F.~King, D.~J.~Miller, S.~Moretti and R.~Nevzorov,
-  %``Constrained Exceptional Supersymmetric Standard Model with a Higgs Near 125 GeV,''
-  Phys.\ Rev.\ D {\bf 86}, 095003 (2012)
-  [arXiv:1206.5028 [hep-ph]].
-  %%CITATION = ARXIV:1206.5028;%%
-  %21 citations counted in INSPIRE as of 09 Jun 2014
-
 %\cite{Athron:2012pw}
 \bibitem{Athron:2012pw}
   P.~Athron, D.~Stockinger and A.~Voigt,
@@ -4071,14 +3920,7 @@ Large Muon- and electron-Number Nonconservation in Supergravity Theories,}
   %%CITATION = ARXIV:1209.1470;%%
   %5 citations counted in INSPIRE as of 03 Jun 2014
 
-  %\cite{Athron:2013ipa}
-\bibitem{Athron:2013ipa} 
-  P.~Athron, M.~Binjonaid and S.~F.~King,
-  %``Fine Tuning in the Constrained Exceptional Supersymmetric Standard Model,''
-  Phys.\ Rev.\ D {\bf 87}, no. 11, 115023 (2013)
-  [arXiv:1302.5291 [hep-ph]].
-  %%CITATION = ARXIV:1302.5291;%%
-  %10 citations counted in INSPIRE as of 09 Jun 2014
+ 
 
 \end{thebibliography}
 \end{document}
