removed a now defunct \cite{NMSSM} that I had missed.

--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -245,10 +245,12 @@ indirect limits that appears in constrained models from the
 significantly higher limits on first and second generation squarks.
 
 These developments motivate the exploration of non-minimal SUSY models
-which ameliorate the naturalness problems, as can happen in the USSM
-\cite{Fayet:1977yc,Cvetic:1997ky,Langacker:2008yv},  \ESSM
-\cite{King:2005jy,Athron:2010zz} and similar models \cite{Nevzorov:2012hs}, or from other gauge extensions \cite{Batra:2003nj, Bharucha:2013ela},
-by raising the tree level Higgs mass. At the same time they can also
+which ameliorate the naturalness problems by raising the tree level
+Higgs mass, as can happen in the USSM
+\cite{Fayet:1977yc,Cvetic:1997ky,Langacker:2008yv}, \ESSM
+\cite{King:2005jy,Athron:2010zz} and similar models
+\cite{Nevzorov:2012hs}, or from other gauge extensions
+\cite{Batra:2003nj, Bharucha:2013ela}. At the same time they can also
 motivate models that are developed with a fresh perspective, based on
 other considerations.  In both cases exploration of such models can be
 aided if it is possible to quickly create a fast spectrum generator.
@@ -554,7 +556,7 @@ Block MASS
 \label{sec:quick-start-alternative-models}
 
 \fs already comes with plenty of predefined models: the CMSSM (simply
-called \code{MSSM}), the NMSSM \cite{NMSSM} in it's $Z_3$-symmetric form (called \code{NMSSM}), $Z_3$-violating NMSSM (\code{SMSSM}), the USSM (\code{UMSSM}),
+called \code{MSSM}), the NMSSM in it's $Z_3$-symmetric form (called \code{NMSSM}), $Z_3$-violating NMSSM (\code{SMSSM}), the USSM (\code{UMSSM}),
 the NUHM \ESSM (\code{E6SSM}) \cite{Athron:2007en}, the
 right-handed neutrino extended MSSM (\code{MSSMRHN}), the NUHM-MSSM
 (\code{NUHMSSM}) and the $R$-symmetric MSSM (\code{MRSSM})
