--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@ FlexibleSUSY-1.0.3 [not released yet]
 
  * Allow selection of Higgs 2-loop contributions in SLHA input file
 
+ * Allow extra user-defined SLHA output blocks
+
  * Bugfix (commit 5f78968): perform residual color contractions before
    stripping group factors.  Thanks to Philip Diessner and Wojciech
    Kotlarski.
