--- a/doc/flexiblesusy-paper.tex
+++ b/doc/flexiblesusy-paper.tex
@@ -345,6 +345,21 @@ been found the pole mass spectrum is eventually calculated using full
 one-loop self-energies (and leading two-loop Higgs self-energy
 contributions for the MSSM and NMSSM).
 
+The standard input and output of the generated code is given in SLHA
+format and an extension of this to incorporate new blocks for models
+which go beyond the MSSM and NMSSM. We use the well known SLHAea
+\cite{slhaea} to create these SLHA files and the extra blocks may be chosen
+by the user. Since the SLHA standard is intended precisely for the
+purpose, MSSM and NMSSM codes should be compliant with this, and we
+have tested that HDECAY\cite{hdecay} can understand the SLHA output of
+FlexibleSUSY.
+
+For models which go beyond this there is no fixed standard for all
+names.  Nonetheless extending the SLHA framework and allowing user
+control of the new block names should greatly simplify the process of
+linking the output to a users own calculator or any new public tools
+that are developed for that model.  
+
 \subsection*{Design goals}
 
 Since the calculation of the pole mass spectrum in a SUSY model is a
@@ -3565,6 +3580,16 @@ Block MINPAR
   [hep-ph/0305127].
   %%CITATION = HEP-PH/0305127;%%
   %99 citations counted in INSPIRE as of 04 Apr 2014
+
+\bibitem{slhaea} F.S.~Thomas http://fthomas.github.io/slhaea/
+
+\bibitem{hdecay}  A. Djouadi, M. Spira and P.M. Zerwas, Phys. Lett.  B {\bf 264}
+(1991) 440 and  Z. Phys. C {\bf 70} (1996) 427;  M. Spira {\it et al.}, Nucl.\
+Phys.\ B {\bf 453} (1995) 17;  A.~Djouadi, J.~Kalinowski and M.~Spira, Comput.
+Phys. Commun. {\bf 108} (1998) 56; J.~M.~Butterworth, A.~Arbey, L.~Basso, S.~Belov, A.~Bharucha, F.~Braam, A.~Buckley and M.~Campanelli {\it et al.},
+  %``The Tools and Monte Carlo working group Summary Report,''
+  arXiv:1003.1643 [hep-ph].
+
 
 %\cite{Degrassi:2009yq}
 \bibitem{Degrassi:2009yq} 
